--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scroll-to-top": "^3.1.0"
