--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-acting-site",
+  "homepage": "https://chelsealily.github.io/actingwebsite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +9,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
