--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@splidejs/react-splide": "^0.7.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
